[gd_scene load_steps=11 format=3 uid="uid://dqy5lv33sy5r7"]

[ext_resource type="Script" path="res://src/inspector_elements/path_field.gd" id="1_enb3p"]
[ext_resource type="Texture2D" uid="uid://coda6chhcatal" path="res://visual/icons/Down.svg" id="2_mjare"]
[ext_resource type="Script" path="res://src/inspector_elements/path_popup.gd" id="3_ocxcs"]
[ext_resource type="Script" path="res://src/inspector_elements/path_command_button.gd" id="4_ej4hf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fpguh"]
content_margin_left = 3.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 0.0
bg_color = Color(0.00784314, 0.00784314, 0.14902, 1)
border_width_left = 1
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0588235, 0.117647, 0.301961, 1)
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_detail = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r5acu"]
content_margin_left = 3.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 0.0
bg_color = Color(0.0117647, 0.0117647, 0.2, 1)
border_width_left = 1
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0745098, 0.156863, 0.4, 1)
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_detail = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5n6p7"]
content_margin_left = 3.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 0.0
bg_color = Color(0.270588, 0.427451, 0.901961, 1)
border_width_left = 1
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 0.8, 1, 1)
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_detail = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jqdng"]
content_margin_left = 8.0
content_margin_right = 8.0
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.866667, 0.933333, 1, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
corner_detail = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h3qkf"]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color(1, 1, 1, 0.133333)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.866667, 0.933333, 1, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
corner_detail = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_37g7w"]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color(1, 1, 1, 0.4)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.866667, 0.933333, 1, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
corner_detail = 2

[node name="PathField" type="VBoxContainer"]
offset_right = 177.0
offset_bottom = 26.0
script = ExtResource("1_enb3p")

[node name="MainLine" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 22)
layout_mode = 2
theme_override_constants/separation = 0

[node name="LineEdit" type="LineEdit" parent="MainLine"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
tooltip_text = "d"
context_menu_enabled = false
select_all_on_focus = true
caret_blink = true

[node name="Button" type="Button" parent="MainLine"]
custom_minimum_size = Vector2(14, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_fpguh")
theme_override_styles/hover = SubResource("StyleBoxFlat_r5acu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5n6p7")
icon = ExtResource("2_mjare")

[node name="Commands" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="PathPopup" type="Popup" parent="."]
transparent_bg = true
size = Vector2i(269, 361)
script = ExtResource("3_ocxcs")

[node name="PanelContainer" type="PanelContainer" parent="PathPopup"]
custom_minimum_size = Vector2(106, 0)
offset_right = 106.0
offset_bottom = 97.0

[node name="MarginContainer" type="MarginContainer" parent="PathPopup/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="MainContainer" type="VBoxContainer" parent="PathPopup/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="RelativeToggle" type="CheckButton" parent="PathPopup/PanelContainer/MarginContainer/MainContainer"]
layout_mode = 2
text = "Relative"
flat = true
alignment = 2

[node name="M" type="Button" parent="PathPopup/PanelContainer/MarginContainer/MainContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_jqdng")
theme_override_styles/hover = SubResource("StyleBoxFlat_h3qkf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_37g7w")
text = "Move to"
alignment = 0
script = ExtResource("4_ej4hf")
command_char = "M"

[node name="L" type="Button" parent="PathPopup/PanelContainer/MarginContainer/MainContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_jqdng")
theme_override_styles/hover = SubResource("StyleBoxFlat_h3qkf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_37g7w")
text = "Line to"
alignment = 0
script = ExtResource("4_ej4hf")
command_char = "L"

[node name="H" type="Button" parent="PathPopup/PanelContainer/MarginContainer/MainContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_jqdng")
theme_override_styles/hover = SubResource("StyleBoxFlat_h3qkf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_37g7w")
text = "Horizontal Line to"
alignment = 0
script = ExtResource("4_ej4hf")
command_char = "H"

[node name="V" type="Button" parent="PathPopup/PanelContainer/MarginContainer/MainContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_jqdng")
theme_override_styles/hover = SubResource("StyleBoxFlat_h3qkf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_37g7w")
text = "Vertical Line to"
alignment = 0
script = ExtResource("4_ej4hf")
command_char = "V"

[node name="Z" type="Button" parent="PathPopup/PanelContainer/MarginContainer/MainContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_jqdng")
theme_override_styles/hover = SubResource("StyleBoxFlat_h3qkf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_37g7w")
text = "Close path"
alignment = 0
script = ExtResource("4_ej4hf")
command_char = "Z"

[node name="A" type="Button" parent="PathPopup/PanelContainer/MarginContainer/MainContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_jqdng")
theme_override_styles/hover = SubResource("StyleBoxFlat_h3qkf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_37g7w")
text = "Elliptical arc to"
alignment = 0
script = ExtResource("4_ej4hf")
command_char = "A"

[node name="Q" type="Button" parent="PathPopup/PanelContainer/MarginContainer/MainContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_jqdng")
theme_override_styles/hover = SubResource("StyleBoxFlat_h3qkf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_37g7w")
text = "Quadratic Bezier to"
alignment = 0
script = ExtResource("4_ej4hf")
command_char = "Q"

[node name="T" type="Button" parent="PathPopup/PanelContainer/MarginContainer/MainContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_jqdng")
theme_override_styles/hover = SubResource("StyleBoxFlat_h3qkf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_37g7w")
text = "Shorthand Quadratic Bezier to"
alignment = 0
script = ExtResource("4_ej4hf")
command_char = "T"

[node name="C" type="Button" parent="PathPopup/PanelContainer/MarginContainer/MainContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_jqdng")
theme_override_styles/hover = SubResource("StyleBoxFlat_h3qkf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_37g7w")
text = "Cubic Bezier to"
alignment = 0
script = ExtResource("4_ej4hf")
command_char = "C"

[node name="S" type="Button" parent="PathPopup/PanelContainer/MarginContainer/MainContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_jqdng")
theme_override_styles/hover = SubResource("StyleBoxFlat_h3qkf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_37g7w")
text = "Shorthand Cubic Bezier to"
alignment = 0
script = ExtResource("4_ej4hf")
command_char = "S"

[connection signal="text_submitted" from="MainLine/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="MainLine/Button" to="." method="_on_button_pressed"]
[connection signal="path_command_picked" from="PathPopup" to="." method="_on_path_command_picked"]
